--- a/TEXT MINING FOR INDONESIAN ONLINE NEWS ARTICLES ABOUT CORONA.ipynb
+++ b/TEXT MINING FOR INDONESIAN ONLINE NEWS ARTICLES ABOUT CORONA.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "# TEXT MINING FOR INDONESIAN ONLINE NEWS ARTICLES ABOUT CORONA<a class='tocSkip'>\n",
     "Hi! In this notebook, we will start our text mining journey by scraping a list of news articles from [tirto.id](https://www.tirto.id) and [detik.com](https://www.detik.com) about the Coronavirus using `BeautifulSoup` package. The contents will be saved to an individual .tsv (tab seperated value) files, which will be loaded again for further analysis. From there, we analyze the posting pattern for each sites and train a `Word2Vec` model using `gensim` package in order to analyze the semantic and syntactic similarity between each preprocessed words."
    ]
@@ -1887,6 +1885,7 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
     "clean_token = list(map(simple_preprocess, clean_text))\n",
     "model = Word2Vec(clean_token,\n",
     "                 size = 500, \n",
@@ -1895,7 +1894,8 @@
     "                 workers = multiprocessing.cpu_count() - 1,\n",
     "                 iter = 1000,\n",
     "                 seed = 123)\n",
-    "model.save(\"word2vec_{}.model\".format(query))"
+    "model.save(\"word2vec_{}.model\".format(query))\n",
+    "'''"
    ]
   },
   {
@@ -2439,7 +2439,7 @@
    "base_numbering": 1,
    "nav_menu": {
     "height": "261px",
-    "width": "217px"
+    "width": "381px"
    },
    "number_sections": true,
    "sideBar": true,
